<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:layout_gravity="center_vertical"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/circular_shape">


            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center_horizontal"
                 />

        </RelativeLayout>

        <com.view9.expertlense.fonts_utils.ProximaNova_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_50sdp"
            android:padding="8dp"
            android:text="@string/enter_your_phone_number"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_pop_up_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.view9.expertlense.fonts_utils.ProximaNova_Regular
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:gravity="center"
                    android:text="@string/enter_valid_number"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/triangle_shape"></View>
            </LinearLayout>

            <com.view9.expertlense.fonts_utils.ProximaNova_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/germany"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">


                <com.view9.expertlense.fonts_utils.EditText_ProximaNova_Regular
                    android:id="@+id/tv_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:hint="@string/phone_number"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:background="@color/light_gray" />



        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.view9.expertlense.fonts_utils.ButtonProximaNova_Bold
            android:layout_marginBottom="@dimen/_30sdp"
            android:id="@+id/btn_send_sms_code"
            style="@style/button_style_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_40sdp"
            android:paddingRight="@dimen/_40sdp"
            android:text="@string/send_sms_code" />

        <com.view9.expertlense.fonts_utils.ProximaNova_Regular
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/register_expert" />
    </LinearLayout>

</RelativeLayout>